syntax = "proto3";

package io.harness.callback;

option java_multiple_files = true;
option go_package = "920_delegate_service_beans";

message BasicAuthCredentials {
  string username = 1;
  string password = 2;
}

message HttpsClientEntrypoint {
  string url = 1;
  oneof credentials {
    BasicAuthCredentials basic_auth_credentials = 2;
  }
}